--- a/index.html
+++ b/index.html
@@ -399,12 +399,27 @@
         </div>
 <br>
 
-<h1 class="tit-integrantes">Evaluación diferenciada</h1>
+<h1 class="tit-integrantes">Evaluación Diferenciada</h1>
 
 <div class="modal-body">
-  <iframe class="Ytv1" src="https://www.youtube.com/embed/vpHtTqDqbrE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
+  <p class="descripción-grupo_dif">En la materia el coordinador empleó la estrategia de usar la evaluación diferenciada para aprovechar destrezas de ciertos estudiantes para enriquecer los contenidos de la materia. <br> <br>
+
+    El grupo CIR produjo, tradujo y adaptó:
+
+    <ul style="margin: 0 10% 5% 10%;">
+      <li style="margin-bottom: 1%;">Un flujo que describe de forma amena cómo se da un fenómeno transmedia, idea original de Steve Peters. <br>
+        <a href="https://www.stevepeters.org/" class="btn btn-primary" style="margin: 1% 0 0 0;">Míralo</a>
+      </li>
+      <li style="margin-bottom: 1%;">Presentaciones sobre <a id="enlaces-trabajo" href="https://drive.google.com/file/d/1u2yELofs0UTep_sBwHHNpyKaos7B5GiT/view?usp=share_link">Storytelling en las películas</a>, <a id="enlaces-trabajo" href="https://drive.google.com/file/d/1pWzu3eQRN1bIfq21bgglFRuF5xQyVTog/view?usp=share_link">Storytelling y superheroes</a>, <a id="enlaces-trabajo" href="https://drive.google.com/file/d/10AaZRZHKoi3X5R2jgJ7_PD5SoarsP3RY/view?usp=share_link" >Narrativa Transmedia</a>, <a id="enlaces-trabajo" href="https://drive.google.com/file/d/1j8GxHFYpLBn7h8n2L1aUscmQW5v3RR2b/view?usp=share_link">Narrativa Transmedia Jeff Gomez</a> y una sobre el <a id="enlaces-trabajo" href="https://drive.google.com/file/d/1BnFHH_C_w85iLTGw8rGjRMPzf9fVvnN7/view?usp=share_link">Internet de las cosas</a>. <br> <a href="https://drive.google.com/drive/folders/1U267Wow2Vn1jh8ejlFa7IKSL6XTBvMbw?usp=share_link" class="btn btn-primary" style="margin: 1% 0 0 0;">Material de estudio</a></li>
+      <li style="margin-bottom: 1%;">Un video animado sobre IoT (Internet of Things) <br> <a href="https://drive.google.com/file/d/16GypO-bgg9UuSNsWsddT8A3nlsK3zsuf/view?usp=share_link" class="btn btn-primary" style="margin: 1% 0 0 0;">Animatic</a></li>
+      <li style="margin-bottom: 1%;">Este sitio web, fue desarrollado para mostrar los proyectos finales.</li>
+    </ul>
+    
+    
+    </p>
+    <iframe id="IOT-video" class="Ytv1" src="https://www.youtube.com/embed/vpHtTqDqbrE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p style="text-align:center; font-weight: 600; color:#DA315E;">I.O.T. (Internet Of Things) animación educativa</p>
-  <p class="descripción-grupo_dif">La <b>evaluación diferenciada</b> consiste en el desarrollo de material de apoyo y producción de herramientas que aporten al avance de la materia. El grupo produjo presentaciones, contenidos, propuestas, videos y el desarrollo de la página web para proyectos finales.</p>
   <section id="galeria">
       <div class="row">
           <div id="Present-grupo" class="col-lg-6" style="margin:0 auto 0 auto;">
