--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@
         <p class="h4">Contacto Directo</p>
         <div id="Contact-footer" class="modal-footer mb-2">
           <a href="https://api.whatsapp.com/send?phone=59171502211&data=AWAS3rxvc0cPuQh7rH38vi6aaTmORYtNhl3WoootzBUhV8zIjVeg2XmcoLpuvP4NL76hfnH8fu1eFgHpblBF8yl6WmHZ5CwY4n9wbe5WDtUklQB5fHhKY5h1csysMiLbs1NWCIh3mvrXHzB3eYWFE4-OdvX7cyTMWE-BLm_73DdawkGfF-J9n3BLaFvemKBDkTRKAAsFZpe9cQ86Tw67vAfRZVO4tnaovIxUzC1T9vMaHA_yRdZPaJlgF-_qsNqK-9FuI2kp6tjex3GyamqSZv1ExbiV-FeOsJyUNJjM38XazhNSz9ZTdQm9kW4Fm8IJIWs&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwAR0aQkuokVImB2W4nLjdc_okpfThh85AyjMvjh36sMcoxLBAtEK8xAmA0WM" class="btn btn-primary"><b>Centro de<br>Atención</b></a>
-        </div>
+        <div class="mb-2"><p id="link-grupo" class="text-secondary" style="font-size: 1.3rem !important; color: #d4d4d4 !important;">Desarrollado por CIR&#174;</p> </div>
+          </div>
       </div> 
     </div>
   </div>
