--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Al permitir el consumo de historias del universo transmedia a través de distint
                           </button>
                       </div>
                       <div class="modal-body">
-                          <iframe class="Ytv" src="https://www.youtube.com/embed/BtNsXbNk5G4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe class="Ytv" src="https://www.youtube.com/embed/CYE4GtgZwsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           <p class="descripción-grupo">El grupo Zombie Burguer consiguió estructurar un universo en el cual seguimos las historias de diferentes personajes en un apocalipsis zombie, explorando un desarrollo que se complementa en cada aplicación.<br>Proponiendo una estrategia de distribución con tecnologías y técnicas de animación. En el video podremos conocer a los actores tras el desarrollo de las estrategias e historias que elevaron un negocio de comida rápida en una experiencia de intriga; ideal para los amantes de las hamburguesas y los zombies.</p>
                           <section id="galeria">
                               <div class="row">
@@ -245,7 +245,7 @@ Al permitir el consumo de historias del universo transmedia a través de distint
                           </button>
                       </div>
                       <div class="modal-body">
-                          <iframe class="Ytv" src="https://www.youtube.com/embed/ADLFhdraKwY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe class="Ytv" src="https://www.youtube.com/embed/OGNUfFjbBJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           <p class="descripción-grupo">El grupo desarrolló una historia que enlaza la memoria del difunto rey del pop y su impacto en la vida de sus personajes; demostrando la repercución y el legado que puede dejar una estrella de talla mundial. Así mísmo, se desarrolló una estrategia en la que se difunde tal mensaje por diversas platafromas y formatos, resaltando por sobre todo su propuesta en podcast; que desarrollaron en el transcurso del proyecto. <br>LLevando el legado de MIchael Jackson a la eternidad.</p>
                           <section id="galeria">
                               <div class="row">
@@ -307,7 +307,7 @@ Al permitir el consumo de historias del universo transmedia a través de distint
                           </button>
                       </div>
                       <div class="modal-body">
-                          <iframe class="Ytv" src="https://www.youtube.com/embed/qMCig-eWdlE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe class="Ytv" src="https://www.youtube.com/embed/PUJrLZVxkAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           <p class="descripción-grupo">El grupo de "El Ceibo" produjo un historia transmedia que se desarrolla en un mundo de chocolate, dando un sentido orgánico a un producto sin un contexto atractivo al día de hoy; el grupo logró realizar un producto gracias a la producción de una historia que es interesante y tambien emplaza el mensaje de lanzamiento de una linea gráfica renovada. <br>Ahora vemos a los responsables de tal proyecto y toda su trayectoria hasta este momento. <br>
                             <br>
                              
@@ -376,7 +376,7 @@ Al permitir el consumo de historias del universo transmedia a través de distint
                           </button>
                       </div>
                       <div class="modal-body">
-                          <iframe class="Ytv" src="https://www.youtube.com/embed/vpHtTqDqbrE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe class="Ytv" src="https://www.youtube.com/embed/CGu7GBf-Op0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           <p class="descripción-grupo">Guardia Animal, ya con antecendetes en el desarrollo de un universo, aprovecharon sus recursos y los adaptaron para crear una historia que complementa de manera lógica con el concpeto de la acción social. El grupo propuso una distribución con varios social media; generando un tráfico interesante y que permite un sencillo seguimiento a la historia transmedia; así tambien demostrando el desarrollo de su historia en viñetas del agrado de un público generalizado. <br>Ahora descubriremos como fue el desarrollo de este proyecto de manos de las mentes que generaron todo este universo.</p>
                           <section id="galeria">
                               <div class="row">
